--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ ul li:last-child{
     border-right: none;
 } */
 nav a::after{
-    content: "|";
+    /* content: "|"; */
     font-weight: 300;
     margin: 0 5px 0 10px;
     position: relative;
@@ -18,6 +18,23 @@ nav a::after{
 nav li:last-child a::after{
     content: "";
 }
+.border-right{
+    border-right: 1px solid gray;
+    padding-right: 10px;
+    margin-right: 10px;
+}
+#menuright+a::after{
+    content: "";
+}
+.vertical-bar::after{
+    content: "|";
+    font-weight: 300;
+    margin: 0 10px 0 10px;
+    position: relative;
+    top: -2px;
+    color: white;
+}
+
 nav a{
     color: white;
 }
@@ -149,4 +166,15 @@ p{
   }
   .ui-widget-content{
       /* border: none; */
+  }
+ button[class~="bg-color-2"]:hover{
+     background-color: #547404;
+ }
+
+
+  @media screen and (max-width:990px)
+  {
+    .vertical-bar::after{
+        content: "";
+    }
   }
